== 0.1.13 (In Git)

=== New features

=== Bugfixes
* document :x run option in command line help (#114, Aslak Hellesøy)

=== Removed features
None

== 0.1.12 2008-12-04

This is the "getting serious with IronRuby release" - largely based on 
"Patrick Gannon":http://www.patrickgannon.net/archive/2008/10/23/bdd-style-feature-tests-using-ironruby-and-rspeccucumber.aspx's
blog entry.

== New features
* Cucumber works with IronRuby/.NET - http://github.com/aslakhellesoy/cucumber/wikis/ironruby-and-net (Aslak Hellesøy)

== Bugfixes
* Fixed bug which was preventing coloring under Autotest (#111, Alan Larkin)

== Removed features
None

== 0.1.11 2008-12-02

Bugfix release with a couple of minor additional features to the command line options.

=== New features
* Capture output from cucumber in Autotest (Alan Larkin)
* Update cucumber generator to work with latest Webrat (Bryan Helkamp)
* CUCUMBR LIKEZ 2 SPEEK WIF KATS. KTHXBAI (Aimee Daniells)
* Support for dynamically pluggable formatters (#99 Joseph Wilk)
* --verbose mode to see ruby files and feature files loaded by Cucumber (#106 Joseph Wilk)

=== Bugfixes
* The jcode library is not loaded on JRuby/Rails. Workaround for http://tinyurl.com/55uu3u. (Aslak Hellesøy)
* Support including modules for class passed to --format (#109 Joseph Wilk)

=== Removed features
* The cucumber gem no longer depends on the rspec gem. It must be downloaded manually if RSpec is used. (Jeff Rafter)

== 0.1.10 2008-11-25

This release mostly has smaller bugfixes. The most significant new feature is how
line numbers are specified. You can now run multiple features at specific lines numbers like this:

  cucumber foo.feature:15 bar.feature:6:45:111

This will run foo.feature at line 15 and bar.feature at line 6, 45 and 111.

=== New features
* Added example showing how to use Cucumber with Test::Unit + Matchy instead of RSpec (Aslak Hellesøy)
* Yield existing world object to World block (#87 Aslak Hellesøy)